# buganise

./: README.md  pyproject.toml
.github/workflows/: publish-python.yml
src/buganise/: __init__.py
