[project]
name = "buganise"
version = "1.0.0"
description = "Dummy package that installs buganize"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Ritchie Mwewa", email = "hi@rly0nheart.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Bug Tracking",
    "Framework :: AsyncIO",
]
dependencies = [
    "buganize",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
